src/objects/Project_Asset__c.object
<CustomObject>
    <description>Project specific records tied to the Project object</description>
    <fields>
        <fullName>Account_Long_ID__c</fullName>
        <formula>Account__r.Account_Long_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Text(Account__r.Mailing_Billing_State_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Assets</relationshipLabel>
        <relationshipName>Project_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArcGIS_Server_Licensing_Type__c</fullName>
        <inlineHelpText>ELA: License provided through enterprise licensing agreement between client and ESRI 

Hosted: License maintained by Omega for our hosted solutions 

OEM: License provided by Omega for client side deployment</inlineHelpText>
        <label>ArcGIS Server Licensing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ELA</fullName>
                </value>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Family__c</fullName>
        <label>Asset Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ESRI Software</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Omega Hosting</fullName>
                </value>
                <value>
                    <fullName>Omega Software</fullName>
                </value>
                <value>
                    <fullName>Omega Solutions</fullName>
                </value>
                <value>
                    <fullName>Partner Solutions</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Third Party Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>Asset Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Asset_Family__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>CSP - No Renewal</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Assets (Billing Contact)</relationshipLabel>
        <relationshipName>Project_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSP_Start_Date__c</fullName>
        <label>CSP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comissionable_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comissionable Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Assets</relationshipLabel>
        <relationshipName>Project_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Amount__c</fullName>
        <label>Final Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Received__c</fullName>
        <label>Final Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>First Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment_Received__c</fullName>
        <label>First Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Managed_billed_under_a_TriTech_Project__c</fullName>
        <inlineHelpText>Indicates whether this project belongs solely to Omega or is part of a TriTech project. The latter indicates that both billing and Dovico time entry will fall under the TriTech project.</inlineHelpText>
        <label>Managed/billed under a TriTech Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separate Omega Project/Hosting/Support: billed/tracked individually rather than as part of a project under another TriTech product line</fullName>
                </value>
                <value>
                    <fullName>TriTech Project: tracked and billed as a TriTech CAD/RMS/Other project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Omega_Project_Team__c</fullName>
        <label>Omega Project Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assign Team</fullName>
                </value>
                <value>
                    <fullName>Team A</fullName>
                </value>
                <value>
                    <fullName>Team B</fullName>
                </value>
                <value>
                    <fullName>Team C</fullName>
                </value>
                <value>
                    <fullName>Team D</fullName>
                </value>
                <value>
                    <fullName>Team E</fullName>
                </value>
                <value>
                    <fullName>Team S</fullName>
                </value>
                <value>
                    <fullName>Brandon Stam</fullName>
                </value>
                <value>
                    <fullName>Bruce Silva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Omega_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Omega Referral</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Long_ID__c</fullName>
        <formula>Opportunity__r.Opportunity_Long_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Assets</relationshipLabel>
        <relationshipName>Project_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>CSP - No Renewal</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_if_not_50_40_10__c</fullName>
        <label>Payment Terms (if not 50/40/10)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Asset_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Asset Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Assets</relationshipLabel>
        <relationshipName>Project_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_of_Hours__c</fullName>
        <label>Projected # of Hours</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Payment_Amount__c</fullName>
        <label>Second Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Payment_Received__c</fullName>
        <label>Second Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex - Standard</fullName>
                </value>
                <value>
                    <fullName>Fedex - Overnight</fullName>
                </value>
                <value>
                    <fullName>Fedex - Priority Overnight</fullName>
                </value>
                <value>
                    <fullName>USPS Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Tracking_Number__c</fullName>
        <label>Shipping Tracking Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <label>Software Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Payment_Amount__c</fullName>
        <label>Third Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Payment_Received__c</fullName>
        <label>Third Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TriTech_Customer_Number__c</fullName>
        <formula>Account__r.EMS_Customer_Number_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriTech Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriTech_Sales_Order__c</fullName>
        <label>TriTech Sales Order #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_End_Date__c</fullName>
        <label>Usage End Date</label>
        <type>Date</type>
    </fields>
    <label>Project Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>